--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^2.9.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-clock": "^4.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.1",
+    "react-simple-clock": "^1.1.3"
   }
 }
